[project]
name = "blinker"
license = {file = "LICENSE.rst"}
authors = [{name = "Jason Kirtland", email = "jek@discorporate.us"}]
maintainers = [{name = "Pallets Ecosystem", email = "contact@palletsprojects.com"}]
description = "Fast, simple object-to-object and broadcast signaling"
readme = "README.rst"
keywords = [
    "signal",
    "emit",
    "events",
    "broadcast",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://blinker.readthedocs.io"
Documentation = "https://blinker.readthedocs.io"
"Source Code" = "https://github.com/pallets-eco/blinker/"
"Issue Tracker" = "https://github.com/pallets-eco/blinker/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "tests/",
    "CHANGES.rst",
    "tox.ini",
]
exclude = [
    "docs/_build/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.8"
files = ["src/blinker"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
#warn_unreachable = True
