[project]
name = "blinker"
version = "1.8.1"
description = "Fast, simple object-to-object and broadcast signaling"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Jason Kirtland" }]
maintainers = [{ name = "Pallets Ecosystem", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.8"

[project.urls]
Documentation = "https://blinker.readthedocs.io"
Source = "https://github.com/pallets-eco/blinker/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "tests/",
    "CHANGES.rst",
    "tox.ini",
]
exclude = [
    "docs/_build/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error"
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["blinker", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.8"
files = ["src/blinker", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.8"
include = ["src/blinker", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
